--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://omai.dev/'
+baseURL = 'https://emil-omai.github.io/omai.dev/'
 defaultContentLanguage = 'sv'
 defaultContentLanguageInSubdir = true
 disableDefaultLanguageRedirect = false
