Testar ny gc konfig

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,8 @@ jobs:
     
     env:
       BUCKET_NAME: omai-www 
-      GCP_PROJECT_ID: 590926833494 #linen-compiler-479716-j7
+      GCP_PROJECT_NO: 590926833494 
+      GCP_PROJECT_ID: linen-compiler-479716-j7
       WIF_POOL_ID: github-deploy-pool
       WIF_PROVIDER_ID: github-oidc-provider # <-- Nytt Provider ID
       WIF_SERVICE_ACCOUNT: github-hugo-deployer@linen-compiler-479716-j7.iam.gserviceaccount.com 
@@ -49,11 +50,14 @@ jobs:
         uses: google-github-actions/auth@v2
         with:
           # Använder de nya WIF-variablerna 
-          workload_identity_provider: projects/${{ env.GCP_PROJECT_ID }}/locations/global/workloadIdentityPools/${{ env.WIF_POOL_ID }}/providers/${{ env.WIF_PROVIDER_ID }}
+          workload_identity_provider: projects/${{ env.GCP_PROJECT_NO }}/locations/global/workloadIdentityPools/${{ env.WIF_POOL_ID }}/providers/${{ env.WIF_PROVIDER_ID }}
           service_account: ${{ env.WIF_SERVICE_ACCOUNT }}
         
       - name: 📤 Synkronisera 'public' till Cloud Storage
         # gsutil är tillgängligt efter autentiseringssteget
         run: |
+          # Sätter projektkontexten explicit
+          gcloud config set project ${{ env.GCP_PROJECT_ID }}
+
           # Synkroniserar innehållet, tar bort filer i bucket som inte finns i 'public/'
           gsutil -m rsync -r public/ gs://${{ env.BUCKET_NAME }}
