Added cloudflare turnstile for forms

--- a/config.toml
+++ b/config.toml
@@ -5,6 +5,7 @@ title = "Omai"
 [params]
   description = "Omai's hemsida"
   author = "Omai"
+  turnstileSiteKey = "0x4AAAAAACNQSMXZq9WoK5m_"
 
 disableKinds = ['taxonomy']
 
