--- a/config.toml
+++ b/config.toml
@@ -6,6 +6,7 @@ title = "Omai"
   description = "Omai's hemsida"
   author = "Omai"
   turnstileSiteKey = "0x4AAAAAACNQSMXZq9WoK5m_"
+  cloudflareAnalyticsToken = "41e94da49f91427db3c2b59aa75e945e"  # Add your Cloudflare Web Analytics token here
 
 disableKinds = ['taxonomy', 'term', 'taxonomyTerm']
 
